# dikw-core

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  INSTALL_FOR_AGENTS.md  LICENSE  README.md  TODOS.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  eval-gate.yml  release.yml  reusable-ci.yml  trivy.yml
docs/: architecture.md  converters.md  deployment-docker.md  design.md  eval-plan.md  getting-started.md  lint-orphan-governance.md  providers.md  server.md
docs/adr/: 0001-client-side-converter-plugins.md
docs/superpowers/specs/: 2026-05-12-synth-quality-eval-design.md
evals/: .gitignore  BASELINES.md  README.md
evals/datasets/cmteb-t2-subset/: dataset.yaml
evals/datasets/mvp/: dataset.yaml  expected.yaml  queries.yaml
evals/datasets/mvp/corpus/: README.md  architecture.md  design.md  getting-started.md
evals/datasets/scifact/: dataset.yaml
evals/datasets/wiki-mini-mm/: ATTRIBUTION.md  dataset.yaml  queries.yaml  targets.yaml
evals/datasets/wiki-mini-mm/corpus/: eiffel_tower.md  great_wall_of_china.md  lion.md  mona_lisa.md  mount_fuji.md  sushi.md
evals/tools/: __init__.py  _common.py  convert_beir.py  convert_cmteb.py  convert_wiki_slice.py  prep_cmteb_t2.py  probe_multimodal.py  run_phase15_from_snapshot.py  sweep_rrf.py
examples/docker/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml
scripts/: pr69_baseline_run.py  tau_sweep_grounding.py
src/dikw_core/: __init__.py  api.py  cli.py  config.py  mcp_server.py  md_inspect.py  progress.py  schemas.py
src/dikw_core/client/: __init__.py  cli_app.py  config.py  converters.py  importer.py  progress.py  serve_and_run.py  task_follow.py  transport.py  upload.py
src/dikw_core/data/: assets.py  hashing.py  path_norm.py  sources.py
src/dikw_core/data/backends/: base.py  markdown.py
src/dikw_core/domains/data/: assets.py  hashing.py  path_norm.py  sources.py
src/dikw_core/domains/data/backends/: __init__.py  base.py  html.py  markdown.py
src/dikw_core/domains/info/: chunk.py  embed.py  render.py  search.py  tokenize.py
src/dikw_core/domains/knowledge/: grouping.py  indexgen.py  links.py  lint.py  lint_fix.py  log.py  page_index.py  synthesize.py  wiki.py
src/dikw_core/domains/knowledge/lint_fixers/: __init__.py  broken_wikilink.py  non_atomic_page.py  orphan_page.py
src/dikw_core/domains/wisdom/: apply.py  distill.py  io.py  review.py
src/dikw_core/eval/: __init__.py  dataset.py  fake_embedder.py  judge.py  metrics.py  runner.py
src/dikw_core/info/: chunk.py  embed.py  render.py  search.py  tokenize.py
src/dikw_core/knowledge/: indexgen.py  links.py  lint.py  log.py  wiki.py
src/dikw_core/prompts/: __init__.py  distill.md  eval_judge_synth.md  lint_fix_broken_wikilink_grounded.md  lint_fix_orphan_merge.md  query.md  synthesize.md
src/dikw_core/providers/: __init__.py  _http.py  anthropic.py  anthropic_compat.py  base.py  codex_auth.py  gitee_multimodal.py  openai_codex.py  openai_compat.py
src/dikw_core/server/: __init__.py  _time.py  app.py  auth.py  errors.py  ingest_op.py  lint_op.py  ndjson.py  routes_assets.py  routes_graph.py  routes_pages.py  routes_query.py  routes_retrieve.py  routes_sync.py  routes_tasks.py  routes_upload.py  runtime.py  synth_op.py
src/dikw_core/server/tasks/: __init__.py  bus.py  events.py  manager.py  store.py  store_postgres.py  store_sqlite.py
src/dikw_core/storage/: __init__.py  _migrations.py  _schema.py  _vec_codec.py  base.py  filesystem.py  postgres.py  sqlite.py
src/dikw_core/storage/migrations/postgres/: 001_init.sql  002_assets.sql  002_embed_cache.sql  003_assets.sql  003_embed_cache.sql  004_wisdom_embed_meta.sql  schema.sql
src/dikw_core/storage/migrations/sqlite/: 001_init.sql  002_assets.sql  003_embed_cache.sql  004_wisdom_embed_meta.sql  schema.sql
src/dikw_core/wisdom/: apply.py  distill.py  io.py  review.py
tests/: conftest.py  fakes.py  test_api_assets.py  test_api_graph.py  test_api_health.py  test_api_links.py  test_api_max_tokens_threading.py  test_api_pages.py  test_assets_materialize.py  test_atomicity_check.py  test_backends.py  test_check_command.py  test_chunk_asset_spans.py  test_chunker.py  test_cli.py  test_codex_auth.py  test_config.py  test_convert_beir.py  test_convert_cmteb.py  test_distill_parser.py  test_domains_layout.py  test_embed_multimodal.py  test_embed_perf.py  test_embed_streaming.py  test_embed_versioning.py  test_eval_cli.py  test_eval_dataset.py  test_eval_judge.py  test_eval_metrics.py  test_eval_runner.py  test_evals_tools.py  test_filename_sanitize.py  test_grouping.py  test_hashing.py  test_indexgen_and_log.py  test_ingest_and_query.py  test_ingest_query_multimodal.py  test_links.py  test_lint.py  test_lint_apply.py  (+48 more)
tests/client/: test_cli_assets.py  test_cli_e2e.py  test_cli_graph.py  test_cli_lint_fix.py  test_cli_op_async.py  test_cli_tasks.py  test_config.py  test_converters.py  test_import.py  test_import_cli.py  test_import_with_converter.py  test_progress.py  test_serve_and_run.py  test_task_follow.py  test_transport.py  test_upload.py
tests/eval/: metrics.py  test_metrics.py
tests/fixtures/: live-minimax-gitee.dikw.yml  mvp_queries.yaml
tests/fixtures/beir-tiny/: corpus.jsonl  queries.jsonl
tests/fixtures/beir-tiny/qrels/: test.tsv
tests/fixtures/mixed/: note.md  page.html
tests/fixtures/mvp_corpus/: design.md  getting-started.md  karpathy-gist.md  karpathy-recipe.md  karpathy-software-2-0.md
tests/fixtures/notes/: dikw.md  karpathy-wiki.md  retrieval.md
tests/server/: _upload_helpers.py  conftest.py  test_auth.py  test_eval_op.py  test_health_route.py  test_import.py  test_ingest_task.py  test_init_route.py  test_lint_fix_routes.py  test_query_route_removed.py  test_query_stream.py  test_retrieve_stream.py  test_routes_assets.py  test_routes_graph.py  test_routes_page_links.py  test_routes_pages.py  test_routes_sync.py  test_runtime.py  test_synth_distill_tasks.py  test_task_manager.py  test_task_store_contract.py  test_upload.py  test_upload_packages.py
