[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dikw-core"
version = "0.0.1"
description = "AI-native knowledge engine across the DIKW pyramid (Data → Information → Knowledge → Wisdom)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "dikw-core contributors" }]
keywords = ["knowledge-base", "rag", "llm", "wiki", "dikw", "obsidian"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Indexing",
]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "markdown-it-py>=3.0",
    "python-frontmatter>=1.1",
    "sqlite-vec>=0.1.6",
    "anthropic>=0.40",
    "openai>=1.40",
    "httpx>=0.27",
    # client/server architecture (Phase 2+ of the in-process → HTTP migration).
    # Adding these in Phase 0 so subsequent PRs can land server/ and client/
    # modules without touching the dependency surface again.
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
postgres = ["psycopg[binary,pool]>=3.2", "pgvector>=0.3"]
# CJK segmentation for the BM25 leg. Without it, SQLite FTS5's default
# unicode61 tokenizer treats every Chinese character as a separate
# token, which collapses BM25 to single-char IDF (observed on CMTEB
# T2Retrieval: nDCG@10 = 0.03). Install with `uv sync --extra cjk`
# or `uv pip install 'dikw-core[cjk]'` before flipping
# `retrieval.cjk_tokenizer: jieba` in dikw.yml.
cjk = ["jieba>=0.42"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-dotenv>=0.5",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-PyYAML",
    # jieba is required to run tokenize.py's tests regardless of the
    # project extras the user picked, so it lives in dev-deps as well.
    "jieba>=0.42",
]

[project.scripts]
dikw = "dikw_core.cli:app"

[project.urls]
Homepage = "https://github.com/dikw-core/dikw-core"
Repository = "https://github.com/dikw-core/dikw-core"

[tool.hatch.build.targets.wheel]
packages = ["src/dikw_core"]

[tool.hatch.build.targets.wheel.force-include]
"src/dikw_core/storage/migrations" = "dikw_core/storage/migrations"
"src/dikw_core/prompts" = "dikw_core/prompts"
# Packaged eval datasets. Top-level `evals/datasets/` is the canonical source
# of truth; this mapping copies it into the wheel so `dikw eval` works after
# `pip install` without requiring users to clone the repo.
"evals/datasets" = "dikw_core/eval/datasets"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = ["E501"]  # line length is handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM117"]
# FastAPI's idiomatic ``Query(default=...)`` and ``Depends(...)`` in
# parameter defaults is exactly the B008 anti-pattern, but here it's
# the framework's contract — silence the rule scope-locally rather
# than refactoring every endpoint.
"src/dikw_core/server/routes_*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["dikw_core"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
# `mcp.*` stays ignorable until mcp_server.py is physically removed in
# the client/server migration's final phase; the dep itself is gone, so
# any stray import would otherwise fail type-check.
module = [
    "sqlite_vec.*", "frontmatter.*", "markdown_it.*", "pgvector.*", "jieba.*",
    "mcp.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q"
markers = [
    "perf: wallclock-budget tests (skip with `-m 'not perf'` if CI is noisy)",
]
